add rechercher bar and btn create properties

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,10 +1,15 @@
 @import "../sass/Components/Navbar.scss";
 @import "../sass/Page/Properties.scss";
+
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f7fafc;
     margin: 0;
     padding: 0;
+}
+
+.bg-primary {
+    background-color: #3498db!important;
 }
 
 .app {
