--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,6 @@
+
 @import "../sass/Components/Navbar.scss";
 @import "../sass/Page/Properties.scss";
-
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f7fafc;
@@ -9,7 +9,7 @@ body {
 }
 
 .bg-primary {
-    background-color: #3498db!important;
+    background-color: #093B69!important;
 }
 
 .app {
@@ -20,4 +20,5 @@ body {
     flex-direction: column;
     
 }
+
 
