--- a/resources/sass/Components/Navbar.scss
+++ b/resources/sass/Components/Navbar.scss
@@ -1,12 +1,11 @@
-
 .bg-gray-100 {
     background-color: #f7fafc;
 }
 
 /* Sidebar */
 .sidebar {
-    width: 16rem;
-    background-color: #2d3748;
+    width: 372px;
+    background-color: #093B69;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -18,7 +17,13 @@
     font-size: 1.25rem;
     font-weight: bold;
     text-align: center;
-    background-color: #2d3748;
+    background-color: #0056A3;
+    height: 109px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2em;
 }
 
 .sidebar nav {
@@ -32,16 +37,34 @@
 .sidebar a {
     display: block;
     padding: 0.5rem 1rem;
-    color: #e2e8f0;
+    color: rgba(255, 255, 255, 0.6);
+    /* Blanc avec 60% de transparence */
     text-decoration: none;
-    font-size: 1rem;
     transition: background-color 0.2s ease-in-out;
-    border-radius: 0.375rem;
+    border-radius: 15px;
+    margin: 0 20px;
+    width: 320px;
+    height: 72px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: 19.11px;
+}
+
+
+.icon-navbar {
+    width: 59px;
+    height: 59px;
+    padding-right: 10px;
+    color: white;
 }
 
 .sidebar a:hover {
-    background-color: #4a5568;
-    color: #fff;
+
+
+    background: rgba(255, 255, 255, 0.15);
+    border-radius: 15px;
+
 }
 
 .sidebar a.active {
@@ -59,4 +82,93 @@
     font-size: 2rem;
     font-weight: 600;
     margin-bottom: 1rem;
+}
+
+
+.input-navbar {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    position: relative;
+    font-size: 19.11px;
+    color: white;
+
+    .search-icon {
+        position: absolute;
+        left: 30px;
+        color: white;
+        width: 48px;
+        height: 48px;
+    }
+
+    input {
+        width: 330px;
+        height: 70px;
+        border-radius: 15px;
+        padding-left: 70px;
+        box-sizing: border-box;
+        background: rgba(255, 255, 255, 0.15);
+        border: none;
+        color: white;
+        font-size: 19.11px;
+
+
+        // Met le placeholder en blanc
+        &::placeholder {
+            color: white;
+            opacity: 1; // Assure qu'il est bien visible
+        }
+
+        &:focus {
+            border: none;
+        }
+
+        &:active {
+            border: none;
+        }
+    }
+}
+
+.bottom-navbar {
+    height: 87px;
+    width: 100%;
+    background-color: #0056A3;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    .user-info {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        height: 100%;
+        padding-right: 35px;
+
+        margin-left: 10px;
+
+        p {
+            margin: 0;
+            padding: 0;
+        }
+    }
+
+    .profil {
+        width: 50px;
+        height: 50px;
+        background-size: cover;
+        background-image: url('https://www.galeriephotographe.com/wp-content/uploads/2020/04/shootings-photo-de-profil-reseaux-sociaux-et-professionnel-a-colmar_015.jpg');
+        border-radius: 50%;
+    }
+
+}
+
+
+
+
+.btn-logout:hover {
+    background-color: #ff3333;
 }
