--- a/resources/sass/Page/Properties-edit.scss
+++ b/resources/sass/Page/Properties-edit.scss
@@ -4,7 +4,9 @@
     flex-direction: column;
     align-items: center;
     cursor: pointer;
-    margin: 10px;
+    margin: 10px 20px;
+    width: 20%;
+
     &:hover {
         color: blue;
     }
