--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,15 +1,13 @@
 
 @import "../sass/Components/Navbar.scss";
 @import "../sass/Page/Properties.scss";
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f7fafc;
+* {
     margin: 0;
     padding: 0;
 }
+body {
+    background-color: #f7fafc;
 
-.bg-primary {
-    background-color: #093B69!important;
 }
 
 .app {
