--- a/resources/sass/Page/Properties.scss
+++ b/resources/sass/Page/Properties.scss
@@ -85,7 +85,35 @@
 }
 
 #map {
-    height: calc(75vh); 
-    width: 450px; 
+    height: 600px;
+    width: 573px;
     border-radius: 12px;
+    height: 80vh;
+}
+
+@media (max-width: 1200px) {
+    #map {
+        width: 500px;
+    }
+}
+
+@media (max-width: 992px) {
+    #map {
+        width: 400px;
+        height: 500px;
+    }
+}
+
+@media (max-width: 768px) {
+    #map {
+        width: 350px;
+        height: 400px;
+    }
+}
+
+@media (max-width: 576px) {
+    #map {
+        width: 300px;
+        height: 300px;
+    }
 }
