--- a/resources/sass/Components/Navbar.scss
+++ b/resources/sass/Components/Navbar.scss
@@ -12,7 +12,7 @@
     height: 100vh;
 }
 
-.sidebar .logo {
+.sidebar .logoName {
     padding: 1rem;
     font-size: 1.25rem;
     font-weight: bold;
